[*]Changed (increased) the depth of terracotta in badlands.
[/list]

Version 1.0
[list]
[*]Added 27 new biomes, plus 4 deco exclusive biomes, each of which are detailed below.
[*]Added 2 new world types using the new biomes. The first will work for vanilla BTW, while the second is only enabled when Deco is also installed, and adds many of Deco's features to world gen.
[*]Added the /biome command to be able to see the name of the current biome.
[*]Added the ability for clay to generate in sand and red sand. Given that some biomes exclusively use sand or red sand for their lake and river beds, this was done to enable clay spawning in those biomes. However, the overall spawn rate of clay has been reduced by 33% to compensate for the increase in viable spawn areas. This only affects this addon's world types.
[/list]
Biomes:
The occurance of various different world gen features per biome is kept as close as possible to their frequency in vanilla world gen to maintain balance.
[list]
[*]Woods: Vanilla forest with some tweaks. Can spawn wolves.
[*]Desert: Vanilla desert with some tweaks. Can spawn desert temples and villages.
[*]Lush Desert: Desert variant with bright green grass, lots of lakes with palm trees, and occasional large oases. Can spawn desert temples and villages.
[*]Savanna: Similar to vanilla savanna, spawn acacia trees (using oak wood) and small bushes. Can spawn villages.
[*]Wetlands: Swamp-like biome with swamp oak and spruce trees. Can spawn witch huts, slimes, and reeds.
[*]Birch Forest: Forest comprised exclusively of birch trees. Can spawn wolves.
[*]Snowy Woods: Exactly like woods but covered in snow. Can spawn wolves.
[*]Steppe: Plains-like biome interspersed with sand and cacti, and occasional patches of shrubs. Can spawn villages.
[*]Chaparral: Rolling hills covered in bushes and shrubs. Can spawn villages and pumpkins.
[*]Ancient Forest: Forest comprising mostly of large trees, including massive 2x2 oak trees. Can spawn wolves.