@@ -4,6 +4,7 @@ import java.util.Random;
 
 public class BTAWorldGenLog extends WorldGenerator
 {
+	/*
 	@Override
 	public boolean generate(World var1, Random var2, int var3, int var4, int var5)
 	{
@@ -51,6 +52,55 @@ public class BTAWorldGenLog extends WorldGenerator
 				return false;
 		} else
 			return false;
+	}
+	*/
 
+	@Override
+	public boolean generate(World world, Random rand, int x, int y, int z) {
+		boolean isEW = rand.nextBoolean();
+		
+		while (world.isAirBlock(x, y, z) && y > 2)
+		{
+			y--;
+		}
+		
+		if (isEW) {
+			for (int i = -2; i <= 2; i++) {
+				if (world.getBlockId(x + i, y, z) != Block.grass.blockID)
+					return false;
+			}
+			
+			for (int i = -1; i <= 1; i++) {
+				world.setBlock(x + i, y + 1, z, Block.wood.blockID, 4, 2);
+			}
+			
+			if (rand.nextBoolean()) {
+				world.setBlock(x - 2, y + 1, z, Block.wood.blockID, 12, 2);
+			}
+			else {
+				world.setBlock(x + 2, y + 1, z, Block.wood.blockID, 12, 2);
+			}
+			
+			return true;
+		}
+		else {
+			for (int i = -2; i <= 2; i++) {
+				if (world.getBlockId(x, y, z + i) != Block.grass.blockID)
+					return false;
+			}
+			
+			for (int i = -1; i <= 1; i++) {
+				world.setBlock(x, y + 1, z + i, Block.wood.blockID, 8, 2);
+			}
+			
+			if (rand.nextBoolean()) {
+				world.setBlock(x, y + 1, z - 2, Block.wood.blockID, 12, 2);
+			}
+			else {
+				world.setBlock(x, y + 1, z + 2, Block.wood.blockID, 12, 2);
+			}
+			
+			return true;
+		}
 	}
 }
