@@ -2,6 +2,7 @@ Version 1.1.0
 [list]
 [*]Added beta terrain gen world type. This world type uses BTA biomes but generates terrain based on old beta 1.7.3 terrain. Any seeds that worked in beta will work with this world type, although caves, ores, etc. will be different. The world type also generates with all vanilla features such as strongholds, villages, mineshafts, ravines, etc.
 [*]Changed (increased) the depth of terracotta in badlands.
+[*]Changed tall grass and flowers to spawn already snowed in in snow biomes if they are able to see the sky.
 [/list]
 
 Version 1.0
